chore: entry point for JavaScript

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <main class="app__main" id="viewRoot" aria-live="polite"></main>
 
         <div class="overlay-root" id="overlayRoot" aria-hidden="true"></div>
+
+        <script type="module" src="./src/app.js"></script>
 </body>
 
 </html>
