--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./styles/components/button.css" />
     <link rel="stylesheet" href="./styles/components/nav.css" />
     <link rel="stylesheet" href="./styles/components/overlay.css" />
+    <link rel="stylesheet" href="./styles/components/field.css" />
+
 </head>
 
 <body>
